--- a/restfulwebservices/src/main/resources/application.properties
+++ b/restfulwebservices/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 management.endpoints.web.exposure.include=*
 #spring.security.user.name=username
 #spring.security.user.password=password
+
+spring.redis.host=192.168.99.100
+spring.redis.port=6379
