--- a/restfulwebservices/src/main/resources/application.properties
+++ b/restfulwebservices/src/main/resources/application.properties
@@ -4,3 +4,6 @@ management.endpoints.web.exposure.include=*
 
 spring.redis.host=192.168.99.100
 spring.redis.port=6379
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
