--- a/microservices/currency-exchange-service/src/main/resources/application.properties
+++ b/microservices/currency-exchange-service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+
+spring.devtools.restart.log-condition-evaluation-delta = false
