--- a/microservices/limits-service/src/main/resources/bootstrap.properties
+++ b/microservices/limits-service/src/main/resources/bootstrap.properties
@@ -3,4 +3,6 @@ server.port=8080
 spring.cloud.config.uri=http://localhost:8888
 spring.profiles.active=qa
 
+management.endpoints.web.exposure.include=*
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+spring.devtools.restart.log-condition-evaluation-delta = false
