--- a/microservices/spring-cloud-config-server/src/main/resources/application.properties
+++ b/microservices/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=spring-cloud-config-server
 server.port=8888
 spring.cloud.config.server.git.uri=file:///projects/courses/git-localconfig-repo
+
+spring.devtools.restart.log-condition-evaluation-delta = false
